# http_server

./: Cargo.toml  README.md  todo
docs/: minimal_http_request.txt
src/: html.rs  http.rs  http_status.rs  main.rs
