[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.1.14", features = ["derive"] }
log = "0.4"
simple_logger = "2.1.0"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
lto = true

[profile.compact]
inherits = "release"
debug-assertions = false
panic = "abort"
